salesforce/force-app/main/default/objects/FlowDetector__mdt/FlowDetector__mdt.object-meta.xml
<CustomObject>
    <description>Phase 19c — Flow-driven detectors. Each record points at an autolaunched Flow that outputs a collection of ForensicFinding__c records. OrgPrism invokes registered Flows during local-org scans. Flow detectors do NOT run on remote-org scans (Named Credential routing is Apex-only).</description>
    <label>Flow Detector</label>
    <pluralLabel>Flow Detectors</pluralLabel>
</CustomObject>