salesforce/force-app/main/default/objects/FlowDetector__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type><length>3000</length><visibleLines>3</visibleLines>
</CustomField>