salesforce/force-app/main/default/objects/FlowDetector__mdt/fields/DetectorId__c.field-meta.xml
<CustomField>
    <fullName>DetectorId__c</fullName>
    <label>Detector Id</label>
    <description>Identifier this Flow's findings will carry. Match an existing Detector__mdt record to inherit severity/recoverability config, or invent a new one.</description>
    <type>Text</type><length>40</length><required>true</required><unique>true</unique><externalId>true</externalId>
</CustomField>