salesforce/force-app/main/default/objects/FlowDetector__mdt/fields/FlowApiName__c.field-meta.xml
<CustomField>
    <fullName>FlowApiName__c</fullName>
    <label>Flow API Name</label>
    <description>API name of the autolaunched Flow to invoke (e.g. OrgPrism_FlowDetectorDemo). Flow must output a collection variable named Findings of type ForensicFinding__c.</description>
    <type>Text</type><length>80</length><required>true</required>
</CustomField>